Make it possible to see favorite tankas

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,8 +10,10 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <%= link_to 'タイムライン', timeline_posts_path, method: :get, class: 'dropdown-item' %>
             <%= link_to 'マイページ', user_path(id: current_user), method: :get, class: 'dropdown-item' %>
+            <%= link_to 'いいねした歌', favorite_posts_path, method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
-            <%= link_to '新しい歌', root_path, method: :get, class: 'dropdown-item' %>
+            <%= link_to '人気の歌', root_path, method: :get, class: 'dropdown-item' %>
+            <%= link_to '新しい歌', posts_path, method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
             <%= link_to '設定', edit_user_registration_path, method: :get, class: 'dropdown-item' %>
             <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
