--- a/app/views/posts/follower.html.erb
+++ b/app/views/posts/follower.html.erb
@@ -1,4 +1,4 @@
-<% @title = '「' + @post.tanka + '」をいいねした歌人' %>
+<% @title = '&hearts;'.html_safe + @post.tanka %>
 
 <div class = "vertical serif tanka-index mt-3">
   <h6>
