--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,3 +101,23 @@ h6 {
 .middle {
   vertical-align: middle;
 }
+
+.wh {
+  color: white;
+}
+
+.bell {
+  font-size: 1.7em;
+}
+
+.top {
+  margin-top: -1em;
+}
+
+.mr {
+  margin-right: 0.6em;
+}
+
+.person {
+  color: #0095d9;
+}
