--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -69,6 +69,6 @@
     <% end %>
   </div>
   <div class="tab-pane fade" id="delete" role="tabpanel" aria-labelledby="delete-tab">
-    <div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "Are yousure?" }, method: :delete, class: 'btn btn-primary' %></div>
+    <div class="field form-group mx-auto col-md-4 mt-3"> <%= button_to "アカウントを削除する", registration_path(resource_name), data: { confirm: "アカウントを削除すると、投稿した短歌もすべて削除されます。本当に削除しますか？" }, method: :delete, class: 'btn btn-primary' %></div>
   </div>
 </div>
