--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,6 +3,9 @@
     <%= link_to 'Utakata', root_path, class: 'navbar-brand' %>
     <% if user_signed_in? %>
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item form-inline mr">
+          <%= link_to content_tag(:i, '', class: 'wh bell fas fa-bell'), notification_posts_path, method: :get %><span class="sm wh top"><%= notifications %></span>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= image_tag current_user.avatar.url(:medium) %>
