--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
   <h6>
     <%= link_to '人気の歌', root_path, method: :get %>｜新しい歌<!--
     --><% unless user_signed_in? %><!--
-       -->｜サイトのご案内
+       -->｜<%= link_to 'サイトのご案内', infos_path, method: :get %>
     <% end %>
   </h6>
   <%= render 'layouts/posts' %>
