--- a/app/views/posts/popular.html.erb
+++ b/app/views/posts/popular.html.erb
@@ -2,7 +2,7 @@
   <h6>
     人気の歌｜<%= link_to '新しい歌', posts_path, method: :get %><!--
     --><% unless user_signed_in? %><!--
-       -->｜サイトのご案内
+       -->｜<%= link_to 'サイトのご案内', infos_path, method: :get %>
     <% end %>
   </h6>
   <%= render 'layouts/posts' %>
