--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,6 +21,8 @@
             <%= link_to '設定', edit_user_registration_path, method: :get, class: 'dropdown-item' %>
             <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
+            <%= link_to 'ご案内', infos_path, method: :get, class: 'dropdown-item' %>
+            <div class="dropdown-divider"></div>
             <div class="px-2 py-2">
               <%= form_tag(search_posts_path, method: :get) do %>
                 <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
