--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -2,4 +2,20 @@
 
 <h4 class="mt-5 mx-auto form-group col-md-5">Utakataとは？</h4>
 
-<p class="col-md-5 mx-auto">短歌投稿サイトです。おおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおお</p>
+<p class="col-md-5 mx-auto">短歌投稿サイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたりすることができます。</p>
+
+<h4 class="mt-5 mx-auto form-group col-md-5">連絡先</h4>
+
+<p class="col-md-5 mx-auto">不具合の報告や疑問点、その他お気軽にご連絡ください。</p>
+
+<ul class="mx-auto form-group col-md-5">
+  <li class="ml">Email：utakatanka@gmail.com</li>
+  <li class="ml">Twitter：<a href="https://twitter.com/utakatanka">@utakatanka</a></li>
+  <li class="ml">管理人のTwitter：<a href="https://twitter.com/fuyu77">@fuyu77</a></li>
+</ul>
+
+<h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
+
+<ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/06　サービスリリース</li>
+</ul>
