--- a/app/views/layouts/_posts.html.erb
+++ b/app/views/layouts/_posts.html.erb
@@ -1,6 +1,6 @@
 <% @posts.each do |post| %>
   <p>
-    <%= link_to post.tanka, post_path(id: post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
+    <%= link_to ruby(post.tanka), post_path(id: post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
     <% if user_signed_in? && current_user.id != post.user_id %>
       <% if current_user.following?(post) %>
         <%= link_to content_tag(:i, '', class: 'sm middle fas fa-heart'), favorite_path(id: post.id), method: :delete, class: 'hearts' %><!--
