--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -14,7 +14,8 @@
         <% user = User.find(notification.follower_id) %>
         <%= link_to (image_tag user.avatar.url(:small)), user_path(id: user.id), method: :get %>
         <% post = Post.find(notification.followable_id) %>
-        <%= link_to user.name, user_path(id: user.id), method: :get, class: 'middle' %><span class="middle">さんがいいねしました「<%= link_to (post.tanka.slice(0, 5) + '…'), post_path(id: post.id), method: :get %>」</span>
+        <% tanka = ApplicationController.helpers.strip_tags(post.tanka) %>
+        <%= link_to user.name, user_path(id: user.id), method: :get, class: 'middle' %><span class="middle">さんがいいねしました「<%= link_to (tanka.slice(0, 5) + '…'), post_path(id: post.id), method: :get %>」</span>
         <span class="middle"><%= notification.created_at.strftime('%Y.%-m.%-d') %></span>
       <% end %>
     </p>
