--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= form_for(@post, url: { controller: :posts, action: :create }) do |f| %>
   <div class="form-group mx-auto col-md-4 mt-3">
-    <%= f.label :description, "ルビ用のHTMLタグを使えます（例：<ruby>漢字<rp>（</rp><rt>かんじ</rt><rp>）</rp></ruby>）", class: 'sm' %><br />
+    <%= f.label :description, "ルビ用のHTMLタグを使えます（例：<ruby>振仮名<rp>（</rp><rt>ふりがな</rt><rp>）</rp></ruby>）", class: 'sm' %><br />
     <%= f.text_field :tanka, autofocus: true, class: 'form-control', id: 'input' %>
   </div>
   <div class="form-group mx-auto col-md-4">
