--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,10 @@
 
 <%= form_for(@post, url: { controller: :posts, action: :create }) do |f| %>
   <div class="form-group mx-auto col-md-4 mt-3">
-    <%= f.label :description, "ルビ用のHTMLタグを使えます（例：<ruby>振仮名<rp>（</rp><rt>ふりがな</rt><rp>）</rp></ruby>）", class: 'sm' %><br />
+    <ul class="sm">
+      <li class="description">ルビ用のHTMLタグを使えます（例：&lt;ruby&gt;振仮名&lt;rp&gt;（&lt;/rp&gt;&lt;rt&gt;ふりがな&lt;/rt&gt;&lt;rp&gt;）&lt;/rp&gt;&lt;/ruby&gt;）</li>
+      <li class="description">"　"←スマホなどで全角スペースを打てない場合はコピーしてご利用ください</li>
+    </ul>
     <%= f.text_field :tanka, autofocus: true, class: 'form-control', id: 'input' %>
   </div>
   <div class="form-group mx-auto col-md-4">
