--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,7 +8,7 @@
       <li class="description">ルビ用のHTMLタグを使えます（例：&lt;ruby&gt;振仮名&lt;rp&gt;（&lt;/rp&gt;&lt;rt&gt;ふりがな&lt;/rt&gt;&lt;rp&gt;）&lt;/rp&gt;&lt;/ruby&gt;）</li>
       <li class="description">"　"←スマホなどで全角スペースを打てない場合はコピーしてご利用ください</li>
     </ul>
-    <%= f.text_field :tanka, autofocus: true, class: 'form-control', id: 'input' %>
+    <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', id: 'input' %>
   </div>
   <div class="form-group mx-auto col-md-4">
     <%= f.submit "投稿する", class: 'btn btn-primary' %>
