--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
             <div class="dropdown-divider"></div>
             <div class="px-2 py-2">
               <%= form_tag(search_posts_path, method: :get) do %>
-                <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
+                <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
               <% end %>
             </div>
           </div>
@@ -36,7 +36,7 @@
       </ul>
     <% else %>
       <%= form_tag(search_posts_path, method: :get) do %>
-        <%= text_field_tag :search, '', autofocus: true, class: 'form-control form-control-sm form-width', type: 'search', placeholder: '短歌 / 歌人を検索' %>
+        <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm form-width', type: 'search', placeholder: '短歌 / 歌人を検索' %>
       <% end %>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
