Windows環境で游明朝を優先的に表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@
 }
 
 .serif {
-  font-family: serif;
+  font-family: 'Hiragino Mincho ProN', 'Yu Mincho', serif;
 }
 
 .tanka-index {
@@ -133,8 +133,4 @@ h6 {
 
 .pd0 {
   padding: 0;
-}
-
-.mx-auto {
-  display: block;
 }
