一部ブラウザで中央寄せが機能しなかった問題を修正

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,7 +15,7 @@
   </div>
 <% end %>
 
-<div class="vertical serif mx-auto" id="review"></div>
+<div class="vertical serif mx-auto width0" id="review"></div>
 
 <script type="text/javascript">
 $('#input').each(function(){
