リロードせずにいいねを反映するように変更

--- a/app/views/posts/follower.html.erb
+++ b/app/views/posts/follower.html.erb
@@ -4,21 +4,16 @@
   <h6>
     <%= link_to ruby(@post.tanka), post_path(id: @post.id), method: :get, class: 'tanka-link middle' %>&nbsp;
     <% if user_signed_in? && current_user.id != @post.user_id %>
-      <% if current_user.following?(@post) %>
-        <%= link_to content_tag(:i, '', class: 'sm middle fas fa-heart'), favorite_path(id: @post.id), method: :delete, class: 'hearts' %><!--
-      --><% else %><!--
-        --><%= link_to content_tag(:i, '', class: 'sm middle far fa-heart'), favorites_path(follow: @post.id), method: :post, class: 'hearts' %><!--
-      --><% end %><!--
-    --><% else %><!--
-      --><i class="sm hearts fas fa-heart middle"></i><!--
-    --><% end %><!--
-    --><span class="sm horizontal hearts middle"><%= @post.followers_by_type_count('User') %></span>
+      <%= render 'favorites/favorites', post: @post, size: 'sm' %>
+    <% else %>
+       <i class="sm hearts fas fa-heart middle"></i><span class="sm horizontal hearts middle"><%= @post.followers_by_type_count('User') %></span>
+    <% end %>
     <%= link_to (image_tag @user.avatar.url(:small)), user_path(id: @user.id), method: :get %>
   </h6>
   <% @users.each do |user| %>
     <p>
       <%= link_to (image_tag user.avatar.url(:medium), align: 'center'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
-      <%= link_to user.name, user_path(id: user.id), method: :get, class: 'tanka-link tanka-show' %>
+      <%= link_to user.name, user_path(id: user.id), method: :get, class: 'tanka-link lg' %>
     </p>
   <% end %>
   <%= paginate @users %>
