--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,21 +3,16 @@
 
 <div class="mt-3 vertical serif mx-auto height-110 width0">
   <%= link_to (image_tag @user.avatar.url(:medium), align: 'center'), user_path(id: @user.id), method: :get, class: 'middle tanka-link' %>&nbsp;
-  <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'middle tanka-show tanka-link' %>&nbsp;
+  <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'middle lg tanka-link' %>&nbsp;
   <span class="middle"><%= @post.created_at.strftime('%Y.%-m.%-d') %></span>&nbsp;
-  <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + tanka + '%0a／' + @user.name + '%0a' %>" target="_blank"><i class="middle tanka-show fab fa-twitter"></i></a>&nbsp;
+  <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + tanka + '%0a／' + @user.name + '%0a' %>" target="_blank"><i class="middle lg fab fa-twitter"></i></a>&nbsp;
   <% if user_signed_in? && current_user.id != @post.user_id %>
-    <% if current_user.following?(@post) %>
-      <%= link_to content_tag(:i, '', class: 'tanka-show middle fas fa-heart'), favorite_path(id: @post.id), method: :delete, class: 'hearts' %><!--
-    --><% else %><!--
-      --><%= link_to content_tag(:i, '', class: 'tanka-show middle far fa-heart'), favorites_path(follow: @post.id), method: :post, class: 'hearts' %><!--
-    --><% end %><!--
-  --><% else %><!--
-    --><i class="middle hearts tanka-show fas fa-heart"></i><!--
-  --><% end %><!--
-  --><%= link_to @post.followers_by_type_count('User'), follower_post_path(id: @post.id), method: :get, class: 'middle horizontal hearts tanka-show' %>
+    <%= render 'favorites/favorites', post: @post, size: 'lg' %>
+  <% else %>
+    <i class="middle hearts lg fas fa-heart"></i><%= link_to @post.followers_by_type_count('User'), follower_post_path(id: @post.id), method: :get, class: 'middle horizontal hearts lg' %>
+  <% end %>
   <% if @user == current_user %>
     <%= link_to '削除', @tanka, method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'middle' %>
   <% end %>
-  <p class="tanka-show"><%= ruby(@post.tanka) %></p>
+  <p class="lg"><%= ruby(@post.tanka) %></p>
 </div>
