--- a/app/views/users/follower.html.erb
+++ b/app/views/users/follower.html.erb
@@ -7,7 +7,7 @@
   <% @users.each do |user| %>
     <p>
       <%= link_to (image_tag user.avatar.url(:medium), align: 'center'), user_path(id: user.id), method: :get, class: 'tanka-link' %>&nbsp;
-      <%= link_to user.name, user_path(id: user.id), method: :get, class: 'tanka-link tanka-show' %>
+      <%= link_to user.name, user_path(id: user.id), method: :get, class: 'tanka-link lg' %>
     </p>
   <% end %>
   <%= paginate @users %>
