--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,9 @@
 <div class = "vertical serif tanka-index mt-3">
   <div class="margin-right">
     <%= image_tag @user.avatar.url(:original), align: 'center' %>&nbsp;
-    <span class="tanka-show middle"><%= @user.name %></span>&nbsp;
+    <span class="lg middle"><%= @user.name %></span>&nbsp;
     <% if @user.twitter_id.present? %>
-      <a href="<%= 'https://twitter.com/' + @user.twitter_id %>" target="_blank"><i class="middle tanka-show fab fa-twitter"></i></a>&nbsp;
+      <a href="<%= 'https://twitter.com/' + @user.twitter_id %>" target="_blank"><i class="middle lg fab fa-twitter"></i></a>&nbsp;
     <% end %>
     <% if user_signed_in? && current_user != @user %>
       <% if current_user.following?(@user) %>
