各種アイコンを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://utakata.s3.amazonaws.com/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://utakata.s3.amazonaws.com/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://utakata.s3.amazonaws.com/icons/favicon-16x16.png">
+    <link rel="manifest" href="https://utakata.s3.amazonaws.com/icons/site.webmanifest">
+    <link rel="mask-icon" href="https://utakata.s3.amazonaws.com/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="https://utakata.s3.amazonaws.com/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="https://utakata.s3.amazonaws.com/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,7 +20,6 @@
     
     <title><%= title %></title>
     <%= csrf_meta_tags %>
-    <%= favicon_link_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
