--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="https://utakata.s3.amazonaws.com/icons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-title" content="Utakata">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
