ルビ・全角スペース挿入機能の調整

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -4,9 +4,19 @@
 
 <p class="col-md-5 mx-auto">短歌投稿サイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたりすることができます。</p>
 
+<h4 class="mt-5 mx-auto form-group col-md-5">Help</h4>
+
+<h5 class="mx-auto form-group col-md-5">ルビの振り方</h5>
+
+<p class="col-md-5 mx-auto">短歌投稿フォームでルビ用のHTMLタグを利用できます（ルビを振りたい文字列を選択して、フォーム右下に現れる「ルビ」ボタンをタップするとルビ用のHTMLタグが挿入されます）。</p>
+
+<p class="col-md-5 mx-auto"><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rp&gt;（&lt;/rp&gt;&lt;rt&gt;ルビ&lt;/rt&gt;&lt;rp&gt;）&lt;/rp&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
+
+<p class="col-md-5 mx-auto">※ &lt;rp&gt;タグに挟まれた括弧（&lt;rp&gt;（&lt;/rp&gt;……&lt;rp&gt;）&lt;/rp&gt;）もTwitterシェア機能などで必要な情報なので省略しないでください。</p>
+
 <h4 class="mt-5 mx-auto form-group col-md-5">連絡先</h4>
 
-<p class="col-md-5 mx-auto">不具合の報告や疑問点、その他お気軽にご連絡ください。</p>
+<p class="col-md-5 mx-auto">不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
 
 <ul class="mx-auto form-group col-md-5">
   <li class="ml">Email：utakatanka@gmail.com</li>
