--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -27,5 +27,5 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
-  <li class="ml">2018/06　サービスリリース</li>
+  <li class="ml">2018/06/23　サービスリリース</li>
 </ul>
