--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -12,7 +12,7 @@
 
 <p class="col-md-5 mx-auto"><b>例</b></br>入力：&lt;ruby&gt;漢字&lt;rp&gt;（&lt;/rp&gt;&lt;rt&gt;ルビ&lt;/rt&gt;&lt;rp&gt;）&lt;/rp&gt;&lt;/ruby&gt;</br>表示：<ruby>漢字<rp>（</rp><rt>ルビ</rt><rp>）</rp></ruby></p>
 
-<p class="col-md-5 mx-auto">※ &lt;rp&gt;タグに挟まれた括弧（&lt;rp&gt;（&lt;/rp&gt;……&lt;rp&gt;）&lt;/rp&gt;）もTwitterシェア機能などで必要な情報なので省略しないでください。</p>
+<p class="col-md-5 mx-auto">※ &lt;rp&gt;タグに挟まれた括弧（&lt;rp&gt;（&lt;/rp&gt;……&lt;rp&gt;）&lt;/rp&gt;）も、ルビに対応していない機能（Twitterシェア機能など）で「漢字（ルビ）」のように表示するために必要な情報なので省略しないでください。</p>
 
 <h4 class="mt-5 mx-auto form-group col-md-5">連絡先</h4>
 
