全角スペースボタンを押した際に挿入された全角スペースの後ろにキャレットが挿入されるように変更

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -43,6 +43,8 @@ $('#space').click(function(){
   var after    = sentence.substr(pos, len)
   sentence = before + word + after
   textarea.value = sentence;
+  textarea.focus()
+  textarea.setSelectionRange(pos + 1, pos + 1)
 })
 
 $(function(){
