<ruby>に属性指定が可能だった不具合を修正

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -4,9 +4,15 @@
 
 <p class="col-md-5 mx-auto">短歌投稿サイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたりすることができます。</p>
 
+<p class="col-md-5 mx-auto"><a href="https://fuyu.hatenablog.com/entry/2018/06/24/233652">開発の背景を紹介するブログ</a>を書きました。</p>
+
 <h4 class="mt-5 mx-auto form-group col-md-5">Help</h4>
 
-<h5 class="mx-auto form-group col-md-5">ルビの振り方</h5>
+<h5 class="mx-auto form-group col-md-5">マニュアル</h5>
+
+<p class="col-md-5 mx-auto"><a href="https://twitter.com/i/moments/1010856871240929280">Utakataの使い方</a>を動画付きでTwitterのモーメントとしてまとめました。</p>
+
+<h5 class="mt-4 mx-auto form-group col-md-5">ルビの振り方</h5>
 
 <p class="col-md-5 mx-auto">短歌投稿フォームでルビ用のHTMLタグを利用できます（ルビを振りたい文字列を選択して、フォーム右下に現れる「ルビ」ボタンをタップするとルビ用のHTMLタグが挿入されます）。</p>
 
@@ -17,6 +23,10 @@
 <h5 class="mt-4 mx-auto form-group col-md-5">短歌にいいねした人の一覧を見る方法</h5>
 
 <p class="col-md-5 mx-auto">個別投稿のページ（短歌の本文をタップすると移動するページ）でハートの下の数字をタップすると、短歌にいいねした人の一覧を見ることができます。</p>
+
+<h5 class="mt-4 mx-auto form-group col-md-5">歌人の一覧を見る方法</h5>
+
+<p class="col-md-5 mx-auto">検索フォームで何も文字を打たずに検索すると、全件表示となり、Utakataに登録されているすべての短歌や歌人を表示することができます。</p>
 
 <h4 class="mt-5 mx-auto form-group col-md-5">連絡先</h4>
 
@@ -31,5 +41,6 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/06/26　ルビ以外の装飾が一部可能となっていた不具合を修正。「ご案内」に情報を追加。</li>
   <li class="ml">2018/06/23　サービスリリース</li>
 </ul>
