--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -42,5 +42,5 @@
 
 <ul class="mx-auto form-group col-md-5">
   <li class="ml">2018/06/26　ルビ以外の装飾が一部可能となっていた不具合を修正。「ご案内」に情報を追加。</li>
-  <li class="ml">2018/06/23　サービスリリース</li>
+  <li class="ml">2018/06/23　サービスリリース。</li>
 </ul>
