--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,9 @@
   <%= link_to (image_tag @user.avatar.url(:medium), align: 'center'), user_path(id: @user.id), method: :get, class: 'middle tanka-link' %>&nbsp;
   <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'middle lg tanka-link' %>&nbsp;
   <span class="middle"><%= @post.created_at.strftime('%Y.%-m.%-d') %></span>&nbsp;
-  <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + tanka + '%0a／' + @user.name + '%0a' %>" target="_blank"><i class="middle lg fab fa-twitter"></i></a>&nbsp;
+  <% twitter_user = @user.name.gsub(/;/, '%3b') %>
+  <% twitter_tanka = tanka.gsub(/;/, '%3b') %>
+  <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + twitter_tanka + '%0a／' + twitter_user + '%0a' %>" target="_blank"><i class="middle lg fab fa-twitter"></i></a>&nbsp;
   <% if user_signed_in? && current_user.id != @post.user_id %>
     <%= render 'favorites/favorites', post: @post, size: 'lg' %>
   <% else %>
