--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -41,6 +41,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/07/31　Twitterシェア機能でセミコロンが表示されない不具合を修正。</li>
   <li class="ml">2018/07/13　投稿した短歌を編集する機能を追加。ユーザーページに短歌の投稿数を確認できる表示を追加。プロフィールの字数制限を140字以内から300字以内に緩和。</li>
   <li class="ml">2018/06/26　ルビ以外の装飾が一部可能となっていた不具合を修正。「ご案内」に情報を追加。</li>
   <li class="ml">2018/06/23　サービスリリース。</li>
