--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <% @title = '新規アカウント登録' %>
+<% @description = '短歌投稿サイトUtakataのアカウント登録を行えます。' %>
 
 <h4 class="mt-5 mx-auto form-group col-md-4">新規アカウント登録</h4>
 
