--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -1,8 +1,9 @@
 <% @title = 'ご案内' %>
+<% @description = '短歌投稿サイトUtakataの概要・使い方・連絡先・更新履歴など。' %>
 
 <h4 class="mt-5 mx-auto form-group col-md-5">Utakataとは？</h4>
 
-<p class="col-md-5 mx-auto">短歌投稿サイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたりすることができます。</p>
+<p class="col-md-5 mx-auto">短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたりすることができます。</p>
 
 <p class="col-md-5 mx-auto"><a href="https://fuyu.hatenablog.com/entry/2018/06/24/233652">開発の背景を紹介するブログ</a>を書きました。</p>
 
