--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <% @title = @user.name + 'の短歌' %>
+<% @description = @user.name + 'さんのページ。自己紹介・投稿短歌の一覧など。' %>
 
 <div class = "vertical serif tanka-index mt-3">
   <div class="margin-right">
