--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,22 @@
     <% if meta_description.present? %>
       <meta name="description" content="<%= meta_description %>">
     <% end %>
+    <% if current_page?(root_path) %>
+      <meta property="og:type" content="website"/>
+      <meta property="og:title" content="<%= title %>"/>
+      <meta property="og:description" content="<%= meta_description %>" />
+      <meta property="og:image" content="https://utakata.s3.amazonaws.com/original/utakata.png" />
+      <meta property="og:url" content="<%= request.original_url %>" />
+      <meta property="og:site_name" content="Utakata"/>
+    <% end %>
+    <% if og_image_url.present? %>
+      <meta property="og:type" content="article"/>
+      <meta property="og:title" content="<%= title %>"/>
+      <meta property="og:description" content="<%= meta_description %>" />
+      <meta property="og:image" content="<%= og_image_url %>" />
+      <meta property="og:url" content="<%= request.original_url %>" />
+      <meta property="og:site_name" content="Utakata"/>
+    <% end %>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
