--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
       <meta name="description" content="<%= meta_description %>">
     <% end %>
     <% if current_page?(root_path) %>
+      <meta name="twitter:card" content="summary"/>
+      <meta name="twitter:site" content="@fuyu77"/>
       <meta property="og:type" content="website"/>
       <meta property="og:title" content="<%= title %>"/>
       <meta property="og:description" content="<%= meta_description %>" />
@@ -28,6 +30,8 @@
       <meta property="og:site_name" content="Utakata"/>
     <% end %>
     <% if og_image_url.present? %>
+      <meta name="twitter:card" content="summary"/>
+      <meta name="twitter:site" content="@fuyu77"/>
       <meta property="og:type" content="article"/>
       <meta property="og:title" content="<%= title %>"/>
       <meta property="og:description" content="<%= meta_description %>" />
