--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -3,7 +3,7 @@
 
 <h4 class="mt-5 mx-auto form-group col-md-5">Utakataとは？</h4>
 
-<p class="col-md-5 mx-auto">短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたりすることができます。</p>
+<p class="col-md-5 mx-auto">短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたり、Twitterに短歌をシェアしたりすることができます。</p>
 
 <p class="col-md-5 mx-auto"><a href="https://fuyu.hatenablog.com/entry/2018/06/24/233652">開発の背景を紹介するブログ</a>を書きました。</p>
 
@@ -42,6 +42,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/09/13　Twitterシェア機能で"#"が表示されない不具合を修正。</li>
   <li class="ml">2018/08/12　SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更。</li>
   <li class="ml">2018/07/31　Twitterシェア機能でセミコロンが表示されない不具合を修正。</li>
   <li class="ml">2018/07/13　投稿した短歌を編集する機能を追加。ユーザーページに短歌の投稿数を確認できる表示を追加。プロフィールの字数制限を140字以内から300字以内に緩和。</li>
