--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -21,9 +21,13 @@
 
 <p class="col-md-5 mx-auto">※ &lt;rp&gt;タグに挟まれた括弧（&lt;rp&gt;（&lt;/rp&gt;……&lt;rp&gt;）&lt;/rp&gt;）も、ルビに対応していない機能（Twitterシェア機能など）で「漢字（ルビ）」のように表示するために必要な情報なので省略しないでください。</p>
 
+<h5 class="mt-4 mx-auto form-group col-md-5">Twitterに短歌をシェアする方法</h5>
+
+<p class="col-md-5 mx-auto">個別投稿のページ（短歌の本文をタップすると遷移するページ）で作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
+
 <h5 class="mt-4 mx-auto form-group col-md-5">短歌にいいねした人の一覧を見る方法</h5>
 
-<p class="col-md-5 mx-auto">個別投稿のページ（短歌の本文をタップすると移動するページ）でハートの下の数字をタップすると、短歌にいいねした人の一覧を見ることができます。</p>
+<p class="col-md-5 mx-auto">個別投稿のページでハートの下の数字をタップすると、短歌にいいねした人の一覧を見ることができます。</p>
 
 <h5 class="mt-4 mx-auto form-group col-md-5">歌人の一覧を見る方法</h5>
 
@@ -42,6 +46,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/09/27　通知でいいねされた短歌をタップした場合に、いいねした人の一覧ページに遷移するように変更。</li>
   <li class="ml">2018/09/13　Twitterシェア機能で"#"が表示されない不具合を修正。</li>
   <li class="ml">2018/08/12　SNSにトップページまたはユーザーページをシェアした際にサムネイル画像が表示されるように変更。</li>
   <li class="ml">2018/07/31　Twitterシェア機能でセミコロンが表示されない不具合を修正。</li>
