--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -23,11 +23,11 @@
 
 <h5 class="mt-4 mx-auto form-group col-md-5">Twitterに短歌をシェアする方法</h5>
 
-<p class="col-md-5 mx-auto">個別投稿のページ（短歌の本文をタップすると遷移するページ）で作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
+<p class="col-md-5 mx-auto">個別投稿のページ（短歌の本文をタップすると遷移するページ）で、作者名の下にあるTwitterアイコンをタップすると、Twitterに短歌をシェアすることができます。</p>
 
 <h5 class="mt-4 mx-auto form-group col-md-5">短歌にいいねした人の一覧を見る方法</h5>
 
-<p class="col-md-5 mx-auto">個別投稿のページでハートの下の数字をタップすると、短歌にいいねした人の一覧を見ることができます。</p>
+<p class="col-md-5 mx-auto">個別投稿のページで、ハートの下の数字をタップすると、短歌にいいねした人の一覧を見ることができます。</p>
 
 <h5 class="mt-4 mx-auto form-group col-md-5">歌人の一覧を見る方法</h5>
 
