--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,17 @@
 <% @title = '新規アカウント登録' %>
 <% @description = '短歌投稿サイトUtakataのアカウント登録を行えます。' %>
 
-<h4 class="mt-5 mx-auto form-group col-md-4">新規アカウント登録</h4>
+<h5 class="mt-5 mx-auto form-group col-md-4">Twitterアカウントで登録する</h4>
+
+<%- resource_class.omniauth_providers.each do |provider| %>
+  <div class="form-group actions mx-auto col-md-4">
+    <%= link_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary' do %>
+      <i class="fab fa-twitter"></i> 登録する
+    <% end %>
+  </div>
+<% end -%>
+
+<h5 class="mt-5 mx-auto form-group col-md-4">メールアドレスで登録する</h4>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="field form-group mx-auto col-md-4">
