ご案内を追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -33,6 +33,10 @@
 
 <p class="col-md-5 mx-auto">検索フォームで何も文字を打たずに検索すると、全件表示となり、Utakataに登録されているすべての短歌や歌人を表示することができます。</p>
 
+<h5 class="mt-4 mx-auto form-group col-md-5">別アカウントへのデータ移行</h5>
+
+<p class="col-md-5 mx-auto">設定画面からデータを別アカウントに移行する方法は現状ありません。データ移行をご希望の場合（メールログインのアカウントからTwitterログインのアカウントに移行したい場合など）は、下記連絡先にご連絡いただければ対応できます。</p>
+
 <h4 class="mt-5 mx-auto form-group col-md-5">連絡先</h4>
 
 <p class="col-md-5 mx-auto">不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
