--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -50,6 +50,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/10/30　特殊記号を含む作品をTwitterシェアできない不具合を修正。</li>
   <li class="ml">2018/10/15　通知機能の不具合を修正。</li>
   <li class="ml">2018/10/08　Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は、上記連絡先にご連絡いただければ対応します。</li>
   <li class="ml">2018/09/27　通知確認画面でいいねされた短歌をタップした場合に、いいねした人の一覧ページに遷移するように変更。</li>
