--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,6 +37,10 @@
 
 <p class="col-md-5 mx-auto">設定画面からデータを別アカウントに移行する方法は現状ありません。データ移行をご希望の場合（メールログインのアカウントからTwitterログインのアカウントに移行したい場合など）は、下記連絡先にご連絡いただければ対応できます。</p>
 
+<h5 class="mt-4 mx-auto form-group col-md-5">左上の"Utakata"をタップすると…</h5>
+
+<p class="col-md-5 mx-auto">新着短歌の一覧が表示されます。</p>
+
 <h4 class="mt-5 mx-auto form-group col-md-5">連絡先</h4>
 
 <p class="col-md-5 mx-auto">不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
@@ -50,6 +54,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/11/03　ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上のUtakataアイコンが「あたらしい歌」へのリンクになっています。</li>
   <li class="ml">2018/10/30　特殊記号を含む作品をTwitterシェアできない不具合を修正。</li>
   <li class="ml">2018/10/15　通知機能の不具合を修正。</li>
   <li class="ml">2018/10/08　Twitterログイン機能を追加。既にメールアドレスでご利用中の方で、データをTwitterアカウントの方に移行されたい方は、上記連絡先にご連絡いただければ対応します。</li>
