更新履歴を追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -54,6 +54,7 @@
 <h4 class="mt-5 mx-auto form-group col-md-5">更新履歴</h4>
 
 <ul class="mx-auto form-group col-md-5">
+  <li class="ml">2018/11/07　短歌の字数制限を緩和。</li>
   <li class="ml">2018/11/03　ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除。新機能追加に備えた対応です。ちなみに、左上のUtakataアイコンが「あたらしい歌」へのリンクになっています。</li>
   <li class="ml">2018/10/30　特殊記号を含む作品をTwitterシェアできない不具合を修正。</li>
   <li class="ml">2018/10/15　通知機能の不具合を修正。</li>
